--- a/css/main.css
+++ b/css/main.css
@@ -111,6 +111,7 @@ textarea {
     width:100%;
     min-height: 100%;
 }
+
 #status {
     display: block;
     width: 25%;
@@ -123,6 +124,10 @@ textarea {
     background-position: center;
     margin: 0px;
     background-size: contain;
+}
+
+#ajaxPreloader {
+    display: none;
 }
 /**
 *** END PRELOADER STYLES***/
@@ -717,7 +722,23 @@ and (max-device-width : 710px) {
     }
 }
 
+.stupakNav {
+	width: 100%;
+	overflow: hidden;
+}
 
+.contents {
+	background: #333;
+	padding: 20px 40px;
+	width: 100%;
+	height: 100%;
+	overflow-y: auto;
+	-webkit-overflow-scrolling: touch;
+	-webkit-transform-style: preserve-3d;
+	-webkit-box-sizing: border-box;
+	-moz-box-sizing: border-box;
+	box-sizing: border-box;
+}
 
 /* ==========================================================================
    Print styles.
